<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.gameOver"
    android:background="@drawable/espacio">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:text="@string/gameover"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="50sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="23dp"
        tools:layout_editor_absoluteY="196dp" />

    <TextView
        android:id="@+id/scoreLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="282dp"
        android:text="@string/_150"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="50sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/highScoreLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="330dp"
        android:text="@string/high_score_300"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="30sp"
        android:textStyle="bold" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:orientation="horizontal"
        android:weightSum="2"
        android:layout_alignParentStart="true"
        android:layout_marginTop="378dp"
        android:layout_marginRight="40dp"
        android:layout_marginLeft="40dp">

        <Button
            android:id="@+id/salirjuego"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/buttonstyle"
            android:text="@string/salir"
            android:textColor="@color/colorPrimaryDark"
            android:layout_marginEnd="10dp"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/reiniciarjuego"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/buttonstyle"
            android:text="@string/reiniciar"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="20sp"
            android:layout_marginStart="10dp"
            android:textStyle="bold" />

    </LinearLayout>


    <Button
        android:id="@+id/scoreboard"
        android:layout_width="wrap_content"
        android:layout_height="75dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="37dp"
        android:background="@drawable/buttonstyle"
        android:text="@string/scoreboard"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="20sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/userPhoto"
        android:layout_width="118dp"
        android:layout_height="117dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="170dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="0.062"
        tools:srcCompat="@tools:sample/avatars[0]" />


</RelativeLayout>