<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/espacio">

    <EditText
        android:id="@+id/nombreusuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"

        android:layout_marginTop="72dp"

        android:hint="@string/usuario"
        android:singleLine="true"
        android:textColor="@color/colorPrimary"
        android:textColorHint="@color/colorPrimary"
        android:textStyle="bold"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="60dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginRight="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="165dp"
        android:text="@string/eres_mayor_de_trece"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold"
        android:textSize="30sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="228dp"
        android:orientation="horizontal"
        android:layout_marginRight="40dp"
        android:layout_marginLeft="40dp">

        <Button
            android:id="@+id/esmayor"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/buttonstyle"
            android:text="@string/es_mayor"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="30sp"
            android:textStyle="bold"
            android:layout_margin="20dp"/>

        <Button
            android:id="@+id/esmenor"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/buttonstyle"
            android:text="@string/no_mayor"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="30sp"
            android:textStyle="bold"
            android:layout_margin="20dp"/>

    </LinearLayout>

    <Button
        android:layout_width="192dp"
        android:layout_height="83dp"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="460dp"
        android:layout_marginRight="40dp"
        android:background="@drawable/buttonstyle"
        android:onClick="salirJuego"
        android:text="@string/salir"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="30sp"
        android:textStyle="bold" />

</RelativeLayout >